x/webhook/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: webhook
  labels:
    admission-webhook: enabled
