x/webhook/manifests/mutating.config.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "kne-assembly-webhook.kne.org"
webhooks:
  - name: "kne-assembly-webhook.kne.org"
    namespaceSelector:
      matchLabels:
        kne-topology: "true"
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: kne-assembly-webhook
        path: /mutate-objects
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPVENDQWlHZ0F3SUJBZ0lVRFBMb2FqV1NL
[...]
        bFlnOCtsZHNJa1E9PQotLS0tLUVORCBDRVJUSUZJQ0FURS0tLS0tCg==
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
